--- a/accounts/templates/accounts/donate.html
+++ b/accounts/templates/accounts/donate.html
@@ -1,6 +1,24 @@
 {% extends 'accounts/main.html' %}
 
 {% block content %}
-    <h1> Donate1 </h1>
+    <div id="liqpay_checkout"></div>
+<script>
+  window.LiqPayCheckoutCallback = function() {
+    LiqPayCheckout.init({
+      data: "eyJ2ZXJzaW9uIjozLCJhY3Rpb24iOiJwYXkiLCJhbW91bnQiOjUsImN1cnJlbmN5IjoiVUFIIiwiZGVzY3JpcHRpb24iOiLQnNGW0Lkg0YLQvtCy0LDRgCIsInB1YmxpY19rZXkiOiJzYW5kYm94X2k4MDI0OTI5NDMxMiIsImxhbmd1YWdlIjoicnUifQ==",
+      signature: "6Kk33D7ZapP38pw9Gne3pcdllvo=",
+      embedTo: "#liqpay_checkout",
+      mode: "embed" // embed || popup,
+        }).on("liqpay.callback", function(data){
+      console.log(data.status);
+      console.log(data);
+      }).on("liqpay.ready", function(data){
+        // ready
+      }).on("liqpay.close", function(data){
+        // close
+    });
+  };
+</script>
+<script src="//static.liqpay.ua/libjs/checkout.js" async></script>
 
 {% endblock %}
